k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gobig-api
  namespace: gobig
spec:
  selector:
    app: gobig-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
